# raspidura

./: README.md  create_data.py  face_recognize.py  main.py  pyproject.toml
app/: main.kv  manager.kv  teclado.kv
